    + [RA] Warn about Thumbs.db files, which are usually useless Windows
      thumbnail databases.  Thanks, Paul Wise.  (Closes: #438202)
    + [RA] Warn about .DS_Store files, used by Mac OS X to store extended
      folder attributes.  Thanks, Paul Wise.  (Closes: #438203)
    + [RA] Improve the recommended command to remove .packlist files.
      Thanks, Justin Pryzby.
  * checks/infofiles:
    + [RA] Emacs 22 now allows embedded images in info files, so accept
      and ignore PNG files in the info directory.  More image types may be
      needed.  Thanks, Andreas Metzler.  (Closes: #438602)
  * checks/menu-format{.desc,}:
    + [RA] Reserved categories are okay in .desktop files if OnlyShowIn is
      present, and generally deserve their own separate tag regardless.
      Thanks, Michael Biebl.  (Closes: #442709)
    + [RA] Ignore categories beginning with "X-", reserved for category
      extensions.  Thanks, Josselin Mouette.  (Closes: #443827)
  * checks/nmu.desc:
    + [RA] Remove obsolete note about binary NMUs.  Patch from Thijs
      Kinkhorst.  (Closes: #437925)
  * checks/scripts{.desc,}:
    + [RA] We now have a csh package.  Allow it as an alternative for csh
      script dependencies.  Thanks, Bernd Zeimetz.  (Closes: #440825)
    + [RA] Allow install-sgmlcatalog --remove in postinst as well as
      prerm and suggest removing it entirely in the long description.
  * checks/version-substvars.desc:
    + [RA] Properly escape < and >.

  * collection/changelog-file{.desc,}:
    + [RA] Collect NEWS.Debian as well as changelog.

 -- Russ Allbery <rra@debian.org>  Sun, 14 Oct 2007 19:41:13 -0700

lintian (1.23.34) unstable; urgency=low

  The "brown paper operator" release.

  * frontend/lintian:
    + [RA] Use =~ with regexes, not eq.  Thanks, Guillem Jover.
      (Closes: #436180)

 -- Russ Allbery <rra@debian.org>  Sun, 05 Aug 2007 19:58:38 -0700

lintian (1.23.33) unstable; urgency=low

  The "menu and cruft reorganization" release.
  