@@ -87,6 +87,10 @@ binary-indep:
 	gzip debian/tmp/usr/share/doc/filenames/news.debian
 	touch debian/tmp/usr/share/doc/filenames/NEWS.Debian
 
+	echo foo > debian/tmp/usr/share/doc/filenames/link-one
+	ln debian/tmp/usr/share/doc/filenames/link-one \
+	    debian/tmp/usr/share/doc/filenames/link-two
+
 	install -d debian/tmp/usr/share/doc/filenames/examples
 	touch debian/tmp/usr/share/doc/filenames/examples/__init__.py
 	touch debian/tmp/usr/share/doc/filenames/examples/very_interesting_example
