@@ -37,6 +37,7 @@ lintian (1.23.35) UNRELEASED; urgency=low
       folder attributes.  Thanks, Paul Wise.  (Closes: #438203)
     + [RA] Improve the recommended command to remove .packlist files.
       Thanks, Justin Pryzby.
+    + [RA] Don't think hard links are zero-length files.
   * checks/infofiles:
     + [RA] Emacs 22 now allows embedded images in info files, so accept
       and ignore PNG files in the info directory.  More image types may be
@@ -47,6 +48,8 @@ lintian (1.23.35) UNRELEASED; urgency=low
       Thanks, Michael Biebl.  (Closes: #442709)
     + [RA] Ignore categories beginning with "X-", reserved for category
       extensions.  Thanks, Josselin Mouette.  (Closes: #443827)
+  * checks/menus:
+    + [RA] Find the targets of hard links correctly.  (Closes: #444355)
   * checks/nmu.desc:
     + [RA] Remove obsolete note about binary NMUs.  Patch from Thijs
       Kinkhorst.  (Closes: #437925)
@@ -61,7 +64,7 @@ lintian (1.23.35) UNRELEASED; urgency=low
   * collection/changelog-file{.desc,}:
     + [RA] Collect NEWS.Debian as well as changelog.
 
- -- Russ Allbery <rra@debian.org>  Sun, 14 Oct 2007 19:41:13 -0700
+ -- Russ Allbery <rra@debian.org>  Sun, 14 Oct 2007 20:29:58 -0700
 
 lintian (1.23.34) unstable; urgency=low
 
